--- a/projectClient/index.html
+++ b/projectClient/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js" integrity="sha256-FiZMk1zgTeujzf/+vomWZGZ9r00+xnGvOgXoj0Jo1jA=" 
+            crossorigin="anonymous"></script>
     <script src="./app.js"></script>
     <script>
         console.log(sum(1,2));
