client jest is not working

--- a/project-client/index.html
+++ b/project-client/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <h1>check the console</h1>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
     <script  src="./app.js"></script>
     <script type="text/babel">
