--- a/project-client/index.html
+++ b/project-client/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,10 +9,7 @@
 
   <body>
     <h1>check the console</h1>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
+    <script src="./utils.js"></script>
     <script  src="./app.js"></script>
-    <script type="text/babel">
-      console.log(sum(1, 2));
-    </script>
   </body>
-</html> -->
+</html>
